# GraSPP-25S-climatechange

./: 20250525_Disaster_Data.ipynb  EffectiveClimatePolicy.ipynb  India_data.py  README.md  TNH.py  Untitled1.ipynb  main.py  pyproject.toml  test-1.ipynb
data/: policies_download.csv
data/processed/: edgar_ghg_emission_processed.csv  manifesto_us_japan.parquet  manifesto_us_japan_word_freq.csv  ndc_climate_words.csv  ndc_word_counts.csv
data/raw/: english_policy_GHG_selenium_120.csv  english_policy_GHG_selenium_143.csv  english_policy_GHG_selenium_30.csv  english_policy_GHG_selenium_60.csv  english_policy_GHG_selenium_90.csv  public_emdat_custom_request_2025-05-06_fbc8ee61-93e5-46cb-b9a2-492c362b1411.xlsx  renewable-share-energy.csv
notebook/: Untitled0.ipynb
notebooks/: 20250525_Disaster_Data.ipynb  20250614_Regression.ipynb  20250622_Regression_LLM_Scrape.ipynb  CN_Policy_Selenium_X.py  CN_news_selenium.py  CN_policy_selenium.py  ClimateP.ipynb  Disaster_Data.ipynb  EU_press_scraping.ipynb  EU_press_word_counting.ipynb  EffectiveClimatePolicy.ipynb  India_GHG_data.ipynb  edgar_ghg_inventory.ipynb  ghg_word_viz.ipynb  manifesto_data_retrieval.ipynb  ndc_data_word_count.ipynb  selenium_sample.ipynb
src/: EDGAR_visualization.py  Gov_press_releases  India_data.py
src/data/: download_manifesto.py
