[project]
name = "graspp-25s-climatechange"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bs4>=0.0.2",
    "jupyterlab>=4.4.1",
    "openpyxl>=3.1.5",
    "pandas>=2.2.3",
    "pip>=25.1.1",
    "plotly>=6.1.1",
    "seaborn>=0.13.2",
    "selenium>=4.33.0",
    "spacy>=3.8.7",
    "tqdm>=4.67.1",
]
